Fix horizontal overflow on mobile

--- a/global.css
+++ b/global.css
@@ -9,6 +9,12 @@
 *,*::before,*::after{
   box-sizing:border-box;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
+
 body{
   margin:0;
   font-family:'Inter', sans-serif;
